# corsairust

./: .gitmodules  CMakeLists.txt  Cargo.toml
device/: Cargo.toml
device/src/: main.rs
device/src/messaging/: error.rs  mod.rs  packet_ids.rs  packets.rs  wrapper.rs
device/src/srgb/: packets.rs
hid/: Cargo.toml
hid/src/: lib.rs
host/: .gitignore  Cargo.toml
host/rust/: .gitmodules  build.rs
host/rust/src/: cxxqt_object.rs
host/src/: main.rs  main.rs.rusb
macros/: Cargo.toml
openrgb/: Cargo.toml  build.rs
openrgb/src/: lib.rs  protocol.rs
