[package]
edition = "2021"
name = "corsairust-device"
version = "0.1.0"

[dependencies]
hid = { path = "../hid" }
corsairust-macros = { path = "../macros" }

cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "0.2.5", features = ["unproven"] }

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

# We're using a Pico by default on this template
rp-pico = "0.7.0"
usb-device = "0.2.9"
usbd-hid = "0.6.1"
critical-section = "1.1.1"
embedded-time = "0.12.1"
fugit = "0.3.6"
binary-layout = { version = "3.1.3", default-features = false }
arrayref = "0.3.6"
cobs = { version = "0.2.3", default-features = false }
openrgb-data = { path = "/home/pwf/src/openrgb-rs/data", default-features = false }
byteorder = { version = "1.4.3", default-features = false }
embedded-alloc = "0.5.0"

[dependencies.genio]
git = "https://github.com/Kixunil/genio"
default-features = false

[dependencies.postcard]
version = "1.0.4"
features = ["use-defmt"]

[dependencies.serde]
version = "1.0"
default-features = false

[dependencies.ssmarshal]
version = "1.0"
default-features = false

# but you can use any BSP. Uncomment this to use the pro_micro_rp2040 BSP instead
# sparkfun-pro-micro-rp2040 = "0.3"

# If you're not going to use a Board Support Package you'll need these:
# rp2040-hal = { version="0.6", features=["rt"] }
# rp2040-boot2 = "0.2"