[package]
name = "corsairust-host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hidapi = "2.1.3"
openrgb = { path = "/home/pwf/src/openrgb-rs" }
tokio = { version = "1.18.2", default-features = false, features = ["rt-multi-thread", "net", "sync", "io-util"] }

[dev_dependencies]
tokio = { version = "1.18.2", default-features = false, features = ["macros"] }