[package]
name = "corsairust-host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hidapi = "2.1.3"
openrgb = { path = "/home/pwf/src/openrgb-rs" }
openrgb-data = { path = "/home/pwf/src/openrgb-rs/data", default-features = false }
tokio = { version = "1.18.2", default-features = false, features = ["rt-multi-thread", "net", "sync", "io-util"] }
genio = { git = "https://github.com/Kixunil/genio", features = ["byteorder"] }
error-chain = "0.12.4"
futures = "0.3.27"
enum_dispatch = "0.3.11"
cobs = { version = "0.2.3" }

[dev-dependencies]
tokio = { version = "1.18.2", default-features = false, features = ["macros", "time"] }
